removed animation from top nav, fixed broken css

--- a/wp-content/themes/buffer-v2/style.css
+++ b/wp-content/themes/buffer-v2/style.css
@@ -391,26 +391,6 @@ big {
 	text-decoration: none;
 }
 
-.top-nav li:first-child a:before {
-	content: url(images/buffer-logomark.svg);
-	display: inline-block;
-	margin: 7px 5px 0 0;
-	vertical-align: middle;
-}
-
-.top-nav li:first-child a:after {
-	content: "app.com";
-	position: absolute;
-	top: 3px;
-	opacity: 0;
-	-webkit-transition: opacity 200ms ease-in-out;
-	        transition: opacity 200ms ease-in-out;
-}
-
-.top-nav li:first-child a:hover:after {
-	opacity: 1;
-}
-
 a.rollover {
 	-webkit-transform: translateY(0);
 	        transform: translateY(0);
@@ -503,7 +483,7 @@ a.happiness:after {
 	padding-left:210px; 
 	height: 50px;
 	padding-top: 6px;
-	font-family: "courier"
+	font-family: "courier";
 	display: inline-block;
 }
 
